# ontario_tax_app_telegram

./: .dockerignore  .env  Dockerfile  Procfile  README.md  create_folder.py  gunicorn.conf.py  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.js
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  yaml.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  endpoint_simulate.py  explain.py  oas_calculator.py  simulate.py  test.py
backend/app/api/v1/endpoints/: __init__.py
backend/app/core/: config.py
backend/app/data_models/: results.py  scenario.py  scenario_input.py  strategy.py
backend/app/db/: __init__.py  schemas.py  session_manager.py
backend/app/services/: email_service.py  llm_service.py  monte_carlo_service.py  oas_calculator.py
backend/app/services/strategy_engine/: __init__.py  engine.py  state.py  tax_rules.py
backend/app/services/strategy_engine/strategies/: __init__.py  base_strategy.py  bracket_filling.py  delay_cpp_oas.py  early_rrif_conversion.py  gradual_meltdown.py  interest_offset_loan.py  lump_sum_withdrawal.py  spousal_equalization.py
backend/app/templates/email/: oas_calculator_results.html  oas_calculator_results.txt
backend/app/utils/: openrouter.py  year_data_loader.py
backend/data/: tax_years.yml
backend/tax/: 2025.yaml
backend/tests/: conftest.py
backend/tests/unit/: test_input_ranges.py  test_scenario_defaults.py  test_tax.py
backend/tests/unit/utils/: test_year_data_loader.py
(+68 files in other folders)
